--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "dependencies": {
         "@atproto/api": "^0.12.22",
         "atproto-firehose": "^0.2.2",
+        "moment-timezone": "^0.5.45",
+        "save-dev": "^0.0.1-security",
         "ws": "^8.16.0"
     },
     "release": {
