change test timezone to chicago

--- a/.github/workflows/testandlint.yml
+++ b/.github/workflows/testandlint.yml
@@ -7,6 +7,8 @@ jobs:
     test:
         name: Run Tests
         runs-on: ubuntu-latest
+        env:
+          TZ: "America/Chicago"
         steps:
             - name: checkout
               uses: actions/checkout@v4
