try single cicd file

--- a/.github/workflows/semanticversionpublish.yml
+++ b/.github/workflows/semanticversionpublish.yml
@@ -1,10 +1,10 @@
 name: Semantic release versioning
-on:
-    push:
-        branches:
-            - main
-            - next
-            - beta
+#on:
+#    push:
+#        branches:
+#            - main
+#            - next
+#            - beta
 jobs:
     release:
         permissions: write-all
