--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -1,8 +1,8 @@
 name: Analyze Code
-on:
-    push:
-        branches:
-            - '*'
+#on:
+#    push:
+#        branches:
+#            - '*'
 jobs:
     analyze:
         name: Analyze
